--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Kurt Heiss Resume</title>
+	</head>
+	<body>
+		
+	</body>
+</html>
+4Commit index.html. At the bottom of the page, there is a text in
