--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Kurt Heiss Resume</title>
-	</head>
-	<body>
-		
-	</body>
+<html lang="en" style="width:100%; height:100%;">
+<head>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8">
+  <title>Kurt Heiss' Resume</title>
+</head>
+  <body style="width:100%; height:100%; margin:0;">
+    <iframe src="http://docs.google.com/gview?url=<https://github.com/kurtnheiss/resume/blob/master/Kurt%20Heiss%20cv.pdf?raw=true>&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+  </body>
 </html>
-4Commit index.html. At the bottom of the page, there is a text in
